[project]
name = "llama-cpp-scripts"
version = "0.0.0"
description = "Scripts that ship with llama.cpp"
authors = [
    { name = "GGML", email = "ggml@ggml.ai" }
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ggml", "gguf", "llama.cpp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.25.0,<2.0.0",
    "sentencepiece>=0.1.98,<0.3.0",
    "transformers>=4.35.2,<5.0.0",
    "protobuf>=4.21.0,<5.0.0",
    "gguf",
    "torch>=2.2.0,<3.0.0",
]

[project.urls]
Homepage = "https://ggml.ai"
Repository = "https://github.com/ggml-org/llama.cpp"

[project.scripts]
llama-convert-hf-to-gguf = "convert_hf_to_gguf:main"
llama-convert-lora-to-gguf = "convert_lora_to_gguf:main"
llama-convert-llama-ggml-to-gguf = "convert_llama_ggml_to_gguf:main"
llama-ggml-vk-generate-shaders = "ggml_vk_generate_shaders:main"

[dependency-groups]
dev = [
    "pytest>=5.2,<6.0",
]

[tool.uv.sources]
gguf = { path = "gguf-py" }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]